test/TestPhases/typechecker/invalid/RunningAFunction.blc
module RunningAFunction

function calc() returns float64
    return 123.321
end

activity main ()()
    var x: float64
    x = run calc()
end
